--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!--
 	Released under MIT License
-	
+
 	Copyright (c) 2010 Christian Brassat
 	<http://crshd.cc>
 
@@ -19,10 +19,10 @@
 	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 	copies of the Software, and to permit persons to whom the Software is
 	furnished to do so, subject to the following conditions:
-	
+
 	The above copyright notice and this permission notice shall be included in
 	all copies or substantial portions of the Software.
-	
+
 	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -55,23 +55,19 @@ Second Heading Text
 http://www.example.com || Another Title
 -->
 
-Title 1
-http://google.com || Google yeah || g
-http://deviantart.com || dA || da
+mail
+http://gmail.google.com || gmail || g
 
-Title 2
-http://pixelfuckers.org || PF
-chrome://bookmarks/ || Chrome bookmarks
+social
+http://www.feedly.com || feedly
+http://www.youtube.com || youtube
+https://getpocket.com || pocket
+http://www.facebook.com || facebook
+http://www.twitter.com || twitter
 
-Coconut
-http://newgrounds.com || NG
-
-New Block
-http://lolwut.com || Lol, Wut?
-
-Bananas
-http://crshd.cc || crshd.cc
-http://rahforum.biz || rahforum.biz
+news
+http://www.buzzfeed.com || buzzfeed
+http://www.dailykos.com || daily kos
 
 </body>
 </html>
